# Syntax_Guardian

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  technical-notes.md
.cqia_vectordb/: chroma.sqlite3
.devcontainer/: devcontainer.json
cqia/: __init__.py
cqia/agent/graph/: flow.py  nodes.py  state.py
cqia/analysis/: dependency_graph.py  runner.py  severity.py
cqia/analysis/detectors/: complexity.py  duplication.py  performance.py  security.py  testing_docs.py
cqia/cli/: main.py
cqia/core/: config.py
cqia/ingestion/: walker.py
cqia/integrations/: github_pr.py
cqia/parsing/: imports.py  ir.py  python_parser.py  ts_parser.py
cqia/presets/: __init__.py  rules.yaml
cqia/qa/: artifacts.py  chain.py  prompt.py
cqia/rag/chunking/: ast_chunker.py
cqia/rag/embeddings/: vector_store.py
cqia/rag/retrieval/: smart_retriever.py
cqia/reporting/: exporters.py  markdown.py  schema.py
cqia/utils/: deps.py
cqia/web/: clone.py  service.py  ui_app.py
presets/: rules.yaml
reports/: dep-graph.json  report.json  report.md
