[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cqia"
version = "0.1.0"
description = "Code Quality Intelligence Agent - CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # change from table to SPDX string to silence deprecation
authors = [{ name = "Anonymous", email = "anon@example.com" }]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.8",
  "networkx>=3.0",
  "pathspec>=0.12"
]

[project.scripts]
cqia = "cqia.cli.main:app"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["cqia*"]
exclude = ["tests*", "docs*", "reports*", "scripts*"]
